--- a/background.html
+++ b/background.html
@@ -45,7 +45,7 @@
         };
         Options.setDefaults(defaults);
 
-        Options.setDefault("tabs.favorites.urls", {});
+        Options.setObject("tabs.favorites.urls");
 
         //Options.set("usage-tracking", true);
 
