Moving some of the Global Helper stuff into Array.js

--- a/background.html
+++ b/background.html
@@ -8,6 +8,7 @@
     <script src="lib/Platform.js"></script>
     <script src="lib/Options.js"></script>
 
+    <script src="lib/Array.js"></script>
     <script src="lib/Analytics.js"></script>
     <script>
         "use strict";
