--- a/options.html
+++ b/options.html
@@ -66,6 +66,7 @@
         <script src="lib/Platform.js"></script>
         <script src="lib/Options.js"></script>
         <script src="lib/UI%20Helper.js"></script>
+        <script src="lib/Array.js"></script>
         <script src="lib/Global%20Helper.js"></script>
 
         <script src="lib/Analytics.js"></script>
