--- a/window.html
+++ b/window.html
@@ -36,6 +36,7 @@
 </head>
 <body>
     <script src="lib/Undo.js"></script>
+    <script src="lib/Array.js"></script>
     <script src="lib/Global%20Helper.js"></script>
     <script src="lib/UI%20Helper.js"></script>
     <script src="lib/Parser.js"></script>
