--- a/window.html
+++ b/window.html
@@ -39,7 +39,7 @@
     <script src="lib/Array.js"></script>
     <script src="lib/Global%20Helper.js"></script>
     <script src="lib/UI%20Helper.js"></script>
-    <script src="lib/Parser.js"></script>
+    <!--<script src="lib/Parser.js"></script>-->
     <script src="lib/Event%20Helper.js"></script>
     <script src="lib/Queue.js"></script>
     <script src="Tab%20Organizer.js"></script>
