Forgot to change the version for Analytics.

--- a/background.html
+++ b/background.html
@@ -64,10 +64,10 @@
         var code = "usage-tracking";
 
         if (Options.get(code)) {
-            _gaq.push(["_trackEvent", "Version", "number", "3.0"]);
+            _gaq.push(["_trackEvent", "Version", "number", "3.1"]);
 
-            //_gaq.push(["_trackEvent", "Version", "type", "normal"]);
-            _gaq.push(["_trackEvent", "Version", "type", "developer"]);
+            _gaq.push(["_trackEvent", "Version", "type", "normal"]);
+            //_gaq.push(["_trackEvent", "Version", "type", "developer"]);
         }
 
         //console.log(config);
