Disabling "scroll-to-when-clicked" behavior on windows.

--- a/background.html
+++ b/background.html
@@ -66,8 +66,8 @@
         if (Options.get(code)) {
             _gaq.push(["_trackEvent", "Version", "number", "3.1"]);
 
-            _gaq.push(["_trackEvent", "Version", "type", "normal"]);
-            //_gaq.push(["_trackEvent", "Version", "type", "developer"]);
+            //_gaq.push(["_trackEvent", "Version", "type", "normal"]);
+            _gaq.push(["_trackEvent", "Version", "type", "developer"]);
         }
 
         //console.log(config);
