Various Options fixes and additions. Also adding in the Experimental options category.

--- a/background.html
+++ b/background.html
@@ -25,6 +25,7 @@
             "popup.hotkey.shift": true,
             "popup.hotkey.alt": false,
             "popup.hotkey.letter": "E",
+            "popup.close.escape": false,
 
             "undo.new-tab": true,
             "undo.rename-window": true,
@@ -39,6 +40,14 @@
             "tabs.close.display": "hover",
 
             "windows.middle-close": false,
+
+            "counter.enabled": false,
+            "counter.reset.number": 5,
+            "counter.reset.time": false,
+            "counter.reset.time.hour": "00",
+            "counter.reset.time.minute": "00",
+            "counter.reset.idle": false,
+            "counter.reset.idle.hour": 10,
 
             "search.show-number": 5,
 
