--- a/options.html
+++ b/options.html
@@ -119,13 +119,18 @@
                     });
 
                     //container.indent(function (container) {
+                        container["DOM.Element"].style.display = "-webkit-box";
+                        container["DOM.Element"].style.webkitBoxOrient = "vertical";
                         container["DOM.Element"].appendChild(UI.create("iframe", function (element) {
                             //element.style.border = "1px solid black";
+                            //element.setAttribute("hidden", "");
+                            element.style.webkitBoxFlex = "1";
+                            element.style.display = "block";
                             element.style.border = "none";
-                            element.style.width = "600px";
-                            element.style.height = "447px";
-                            element.style.margin = "0px";
-                            element.style.padding = "0px";
+                            //element.style.width = "600px";
+                            //element.style.height = "447px";
+                            //element.style.margin = "0px";
+                            //element.style.padding = "0px";
                             element.style.marginTop = "10px";
                             element.src = "themes/window-viewer.html";
                         }));
